--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Zaverecka" parent="Theme.Material3.DayNight.NoActionBar">
+
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="colorPrimary">@android:color/black</item>
+        <item name="android:statusBarColor">#000000</item> <!-- nebo jiná barva -->
+
     </style>
 
     <style name="Theme.Zaverecka" parent="Base.Theme.Zaverecka" />
+
 </resources>
